data/derived/comb/progs/unify/prog1844.ml.out
Characters 69-73:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type 'a -> 'a
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'a
